--- a/Electric_Force/README.html
+++ b/Electric_Force/README.html
@@ -553,25 +553,25 @@
 </head>
 
 <body class="body">
-  <div id="toc" style="display: block; min-width: 5em;">
+  <div id="toc" style="min-width: 5em;">
     <ol>
       <li>
-        <a href="#general-comments" raw="# General Comments" lo="1">
+        <a href="#general-comments" raw="# General Comments" lo="1" class="highlighted">
           <span class="toctext">General Comments</span>
         </a>
       </li>
       <li>
-        <a href="#example-1" raw="# Example 1" lo="7" class="">
+        <a href="#example-1" raw="# Example 1" lo="7">
           <span class="toctext">Example 1</span>
         </a>
       </li>
       <li>
-        <a href="#problem-1" raw="# Problem 1" lo="11" class="">
+        <a href="#problem-1" raw="# Problem 1" lo="11">
           <span class="toctext">Problem 1</span>
         </a>
       </li>
       <li>
-        <a href="#problem-3" raw="# Problem 3" lo="15" class="highlighted">
+        <a href="#problem-3" raw="# Problem 3" lo="15">
           <span class="toctext">Problem 3</span>
         </a>
       </li>
@@ -582,7 +582,7 @@
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="1" lf="1"><a name="general-comments" number="1" lo="1" raw="# General Comments" class="anchor hanchor" href="#general-comments"><span class="hnumber">1</span>&nbsp;<span class="htext">General Comments</span></a></h1>
+        <h1 lo="1" lf="1" class="highlighted"><a name="general-comments" number="1" lo="1" raw="# General Comments" class="anchor hanchor" href="#general-comments"><span class="hnumber">1</span>&nbsp;<span class="htext">General Comments</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">1</span></div>
       </div>
       <div class="block">
@@ -609,7 +609,7 @@ c-16-25.333-24-45-24-59z"></path>
           </li>
           <li markerlength="2" padlength="0" lo="5" lf="7">
             <div class="block">
-              <p padlength="0" lo="5" lf="5">At this point in the semester, many students will have difficulty with determining <span len="3" raw="_r_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.4306em;"></span><span class="mord mathnormal" style="margin-right:0.02778em;">r</span></span></span></span> and it will help if Example 1 is worked through on the board.</p>
+              <p padlength="0" lo="5" lf="5" class="active">At this point in the semester, many students will have difficulty with determining <span len="3" raw="_r_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.4306em;"></span><span class="mord mathnormal" style="margin-right:0.02778em;">r</span></span></span></span> and it will help if Example 1 is worked through on the board.</p>
               <div class="block-info" style="display: none;"><span class="line-numbers">5</span></div>
             </div>
           </li>
@@ -619,31 +619,31 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="7" lf="7" class=""><a name="example-1" number="2" lo="7" raw="# Example 1" class="anchor hanchor" href="#example-1"><span class="hnumber">2</span>&nbsp;<span class="htext">Example 1</span></a></h1>
+        <h1 lo="7" lf="7"><a name="example-1" number="2" lo="7" raw="# Example 1" class="anchor hanchor" href="#example-1"><span class="hnumber">2</span>&nbsp;<span class="htext">Example 1</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">7</span></div>
       </div>
       <div class="block">
-        <p padlength="0" lo="9" lf="9" class="">Two approaches are given for computing components; most of the students use the “acute angle+diagram” approach, but some use the other approach. You may need to emphasize that they should choose the method they are most comfortable with.</p>
+        <p padlength="0" lo="9" lf="9">Two approaches are given for computing components; most of the students use the “acute angle+diagram” approach, but some use the other approach. You may need to emphasize that they should choose the method they are most comfortable with.</p>
         <div class="block-info" style="display: none;"><span class="line-numbers">9</span></div>
       </div>
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="11" lf="11" class=""><a name="problem-1" number="3" lo="11" raw="# Problem 1" class="anchor hanchor" href="#problem-1"><span class="hnumber">3</span>&nbsp;<span class="htext">Problem 1</span></a></h1>
+        <h1 lo="11" lf="11"><a name="problem-1" number="3" lo="11" raw="# Problem 1" class="anchor hanchor" href="#problem-1"><span class="hnumber">3</span>&nbsp;<span class="htext">Problem 1</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">11</span></div>
       </div>
       <div class="block">
-        <p padlength="0" lo="13" lf="13" class="">One could use the solutions to Example 1 to solve this quickly. Most students don’t. Although very similar to Example 1, I find students still struggle even after going through the example. In some cases, I interrupt their work and go through the solution; otherwise some students won’t finish this problem in a 50-minute recitation period.</p>
+        <p padlength="0" lo="13" lf="13">One could use the solutions to Example 1 to solve this quickly. Most students don’t. Although very similar to Example 1, I find students still struggle even after going through the example. In some cases, I interrupt their work and go through the solution; otherwise some students won’t finish this problem in a 50-minute recitation period.</p>
         <div class="block-info" style="display: none;"><span class="line-numbers">13</span></div>
       </div>
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="15" lf="15" class="highlighted"><a name="problem-3" number="4" lo="15" raw="# Problem 3" class="anchor hanchor" href="#problem-3"><span class="hnumber">4</span>&nbsp;<span class="htext">Problem 3</span></a></h1>
+        <h1 lo="15" lf="15"><a name="problem-3" number="4" lo="15" raw="# Problem 3" class="anchor hanchor" href="#problem-3"><span class="hnumber">4</span>&nbsp;<span class="htext">Problem 3</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">15</span></div>
       </div>
       <div class="block">
-        <p padlength="0" lo="17" lf="17" class="active">Students don’t often recognize that a short-cut for finding <span len="12" raw="_\sin\theta_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.6944em;"></span><span class="mop">sin</span><span class="mspace" style="margin-right:0.1667em;"></span><span class="mord mathnormal" style="margin-right:0.02778em;">θ</span></span></span></span> and <span len="12" raw="_\cos\theta_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.6944em;"></span><span class="mop">cos</span><span class="mspace" style="margin-right:0.1667em;"></span><span class="mord mathnormal" style="margin-right:0.02778em;">θ</span></span></span></span> is to read it off from the diagram (instead of computing <span len="8" raw="_\theta_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.6944em;"></span><span class="mord mathnormal" style="margin-right:0.02778em;">θ</span></span></span></span> from an inverse tangent and plugging into <span len="6" raw="_\cos_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.4306em;"></span><span class="mop">cos</span></span></span></span> and <span len="6" raw="_\sin_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.6679em;"></span><span class="mop">sin</span></span></span></span>). This short-cut is mentioned in the solution and, and I tell the advanced students the short–cut.</p>
+        <p padlength="0" lo="17" lf="17">Students don’t often recognize that a short-cut for finding <span len="12" raw="_\sin\theta_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.6944em;"></span><span class="mop">sin</span><span class="mspace" style="margin-right:0.1667em;"></span><span class="mord mathnormal" style="margin-right:0.02778em;">θ</span></span></span></span> and <span len="12" raw="_\cos\theta_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.6944em;"></span><span class="mop">cos</span><span class="mspace" style="margin-right:0.1667em;"></span><span class="mord mathnormal" style="margin-right:0.02778em;">θ</span></span></span></span> is to read it off from the diagram (instead of computing <span len="8" raw="_\theta_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.6944em;"></span><span class="mord mathnormal" style="margin-right:0.02778em;">θ</span></span></span></span> from an inverse tangent and plugging into <span len="6" raw="_\cos_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.4306em;"></span><span class="mop">cos</span></span></span></span> and <span len="6" raw="_\sin_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.6679em;"></span><span class="mop">sin</span></span></span></span>). This short-cut is mentioned in the solution and, and I tell the advanced students the short–cut.</p>
         <div class="block-info" style="display: none;"><span class="line-numbers">17</span></div>
       </div>
     </div>
