--- a/Enclosed_Charge/README.html
+++ b/Enclosed_Charge/README.html
@@ -291,6 +291,11 @@
       padding-left: 0.5em;
     }
 
+    #display>.section>.block &>ol.compact {
+      margin-top: 0.25em;
+      margin-bottom: 0.25em;
+    }
+
     #display>.section>.block>ol.loose {
       margin-top: 0.5em;
       margin-bottom: 0.5em;
@@ -551,34 +556,34 @@
   <div id="toc" style="min-width: 5em;">
     <ol>
       <li>
-        <a href="#f2022" raw="# F2022" lo="2" class="">
+        <a href="#f2022" raw="# F2022" lo="3">
           <span class="toctext">F2022</span>
         </a>
         <ol class="toc" style="display: none;">
           <li>
-            <a href="#email" raw="## Email" lo="4" class="">
+            <a href="#email" raw="## Email" lo="5">
               <span class="toctext">Email</span>
             </a>
           </li>
           <li>
-            <a href="#comments-before" raw="## Comments before" lo="26">
+            <a href="#comments-before" raw="## Comments before" lo="27">
               <span class="toctext">Comments before</span>
             </a>
           </li>
           <li>
-            <a href="#comments-after" raw="## Comments after" lo="42">
+            <a href="#comments-after" raw="## Comments after" lo="43">
               <span class="toctext">Comments after</span>
             </a>
           </li>
         </ol>
       </li>
       <li>
-        <a href="#s2023" raw="# S2023" lo="84">
+        <a href="#s2023" raw="# S2023" lo="85">
           <span class="toctext">S2023</span>
         </a>
         <ol class="toc" style="display: none;">
           <li>
-            <a href="#comments-after" raw="## Comments after" lo="86">
+            <a href="#comments-after" raw="## Comments after" lo="87">
               <span class="toctext">Comments after</span>
             </a>
           </li>
@@ -595,13 +600,13 @@
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="3" lf="3" class=""><a name="f2022" number="1" lo="3" raw="# F2022" class="anchor hanchor" href="#f2022" lf="3"><span class="hnumber">1</span>&nbsp;<span class="htext">F2022</span></a></h1>
+        <h1 lo="3" lf="3"><a name="f2022" number="1" lo="3" raw="# F2022" class="anchor hanchor" href="#f2022"><span class="hnumber">1</span>&nbsp;<span class="htext">F2022</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">3</span></div>
       </div>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="5" lf="5" class=""><a name="email" number="1.1" lo="5" raw="## Email" class="anchor hanchor" href="#email" lf="5"><span class="hnumber">1.1</span>&nbsp;<span class="htext">Email</span></a></h2>
+        <h2 lo="5" lf="5"><a name="email" number="1.1" lo="5" raw="## Email" class="anchor hanchor" href="#email"><span class="hnumber">1.1</span>&nbsp;<span class="htext">Email</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">5</span></div>
       </div>
       <div class="block">
@@ -617,25 +622,25 @@
           <li markerlength="3" padlength="0" lo="11" lf="11">
             <div class="block">
               <p padlength="0" lo="11" lf="11">Plotting piecewise functions (the motivation for them plotting points is because many get stuck and I tell them to plot a few points first to give themself a hint)</p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">15-17</span></div>
+              <div class="block-info" style="display: none;"><span class="line-numbers">11</span></div>
             </div>
           </li>
           <li markerlength="3" padlength="0" lo="12" lf="12">
             <div class="block">
               <p padlength="0" lo="12" lf="12">Manipulating variables instead of numbers</p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">15-17</span></div>
+              <div class="block-info" style="display: none;"><span class="line-numbers">12</span></div>
             </div>
           </li>
           <li markerlength="3" padlength="0" lo="13" lf="13">
             <div class="block">
               <p padlength="0" lo="13" lf="13">Identifying how Q enclosed scales with the radius of the Gaussian volume (or other dimensions) and using this to check their plot and answers</p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">15-17</span></div>
+              <div class="block-info" style="display: none;"><span class="line-numbers">13</span></div>
             </div>
           </li>
           <li markerlength="3" padlength="0" lo="14" lf="14">
             <div class="block">
               <p padlength="0" lo="14" lf="14">Computing charge densities</p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">15-17</span></div>
+              <div class="block-info" style="display: none;"><span class="line-numbers">14</span></div>
             </div>
           </li>
           <li markerlength="3" padlength="0" lo="15" lf="17">
@@ -656,13 +661,13 @@
           <li markerlength="3" padlength="0" lo="19" lf="19">
             <div class="block">
               <p padlength="0" lo="19" lf="19">draw the field lines for the charged object,</p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">21-23</span></div>
+              <div class="block-info" style="display: none;"><span class="line-numbers">19</span></div>
             </div>
           </li>
           <li markerlength="3" padlength="0" lo="20" lf="20">
             <div class="block">
               <p padlength="0" lo="20" lf="20">identify the conditions on the Gaussian volume such that the computation of flux through its surface is easy, and</p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">21-23</span></div>
+              <div class="block-info" style="display: none;"><span class="line-numbers">20</span></div>
             </div>
           </li>
           <li markerlength="3" padlength="0" lo="21" lf="23">
@@ -685,7 +690,7 @@
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="27" lf="27"><a name="comments-before" number="1.2" lo="27" raw="## Comments before" class="anchor hanchor" href="#comments-before" lf="27"><span class="hnumber">1.2</span>&nbsp;<span class="htext">Comments before</span></a></h2>
+        <h2 lo="27" lf="27"><a name="comments-before" number="1.2" lo="27" raw="## Comments before" class="anchor hanchor" href="#comments-before"><span class="hnumber">1.2</span>&nbsp;<span class="htext">Comments before</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">27</span></div>
       </div>
       <div class="block">
@@ -717,7 +722,7 @@
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="43" lf="43"><a name="comments-after" number="1.3" lo="43" raw="## Comments after" class="anchor hanchor" href="#comments-after" lf="43"><span class="hnumber">1.3</span>&nbsp;<span class="htext">Comments after</span></a></h2>
+        <h2 lo="43" lf="43"><a name="comments-after" number="1.3" lo="43" raw="## Comments after" class="anchor hanchor" href="#comments-after"><span class="hnumber">1.3</span>&nbsp;<span class="htext">Comments after</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">43</span></div>
       </div>
       <div class="block">
@@ -729,55 +734,55 @@
           <li markerlength="3" padlength="0" lo="47" lf="48">
             <div class="block">
               <p padlength="0" lo="47" lf="48">✓ Have a stand-alone section at the start for computing charge density given Q on all surfaces and volumes given.</p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">65-67</span></div>
+              <div class="block-info" style="display: none;"><span class="line-numbers">47-48</span></div>
             </div>
           </li>
           <li markerlength="3" padlength="0" lo="49" lf="50">
             <div class="block">
               <p padlength="0" lo="49" lf="50">✗ Start problems with a density given. (<em type="md" marker="*">Will do in next revision</em>.)</p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">65-67</span></div>
+              <div class="block-info" style="display: none;"><span class="line-numbers">49-50</span></div>
             </div>
           </li>
           <li markerlength="3" padlength="0" lo="51" lf="52">
             <div class="block">
               <p padlength="0" lo="51" lf="52">Move two cylinder problems to the end. They appear in the more difficult Gauss’ law problems, and students got stuck. I had to stop them and give answers so they had time for the other problems. (Even after my explanation and the answers, I noticed students still trying to answer them.) Add a discussion for the cylindrical shell problem about how it can be solved given a linear or surface charge density. The solid cylinder problem could be solved given a linear or volume charge density, but I don’t recall ever seeing a problem where its linear density was given.</p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">65-67</span></div>
+              <div class="block-info" style="display: none;"><span class="line-numbers">51-52</span></div>
             </div>
           </li>
           <li markerlength="3" padlength="0" lo="53" lf="54">
             <div class="block">
               <p padlength="0" lo="53" lf="54">✓ Add to the notes a definition of linear, surface, and volume charge density when the charge is uniformly distributed. I’m reluctant to give formulas for areas and volumes because it lets them think they don’t need to know it without reference.</p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">65-67</span></div>
+              <div class="block-info" style="display: none;"><span class="line-numbers">53-54</span></div>
             </div>
           </li>
           <li markerlength="3" padlength="0" lo="55" lf="56">
             <div class="block">
               <p padlength="0" lo="55" lf="56">Students who had difficulty plotting the curve also had difficulty in writing down the value at various points. I’m not sure what to do about that. There could be a sentence that says “if the formula does not depend on <span len="3" raw="_r_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.4306em;"></span><span class="mord mathnormal" style="margin-right:0.02778em;">r</span></span></span></span>, …”. But the students who didn’t realize this understood so little that I’m not sure it will help.</p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">65-67</span></div>
+              <div class="block-info" style="display: none;"><span class="line-numbers">55-56</span></div>
             </div>
           </li>
           <li markerlength="3" padlength="0" lo="57" lf="58">
             <div class="block">
               <p padlength="0" lo="57" lf="58">Add a question after the spherical shell and solid sphere problem that states “if the total charge is Q in both cases, is Q_enclosed for r&gt;R the same?” Ideally, there would be a follow-up that makes the point that if Q is uniformly distributed on a shell, thick shell, solid sphere, or on an infinitesimal sphere, E will be the same outside. I’m still trying to think about how to address the issue about this you raised earlier.</p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">65-67</span></div>
+              <div class="block-info" style="display: none;"><span class="line-numbers">57-58</span></div>
             </div>
           </li>
           <li markerlength="3" padlength="0" lo="59" lf="60">
             <div class="block">
               <p padlength="0" lo="59" lf="60">I may add a question at the end that gives a non-uniform density for a solid sphere to make the point that the total charge/ total length, total charge/total area, and total charge/total volume formulas only work apply if the charge is uniformly distributed. Probably I’ll give the integral formula for Q and show it gives the correct result for constant rho and then ask them to use it for rho that depends on r.</p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">65-67</span></div>
+              <div class="block-info" style="display: none;"><span class="line-numbers">59-60</span></div>
             </div>
           </li>
           <li markerlength="3" padlength="0" lo="61" lf="62">
             <div class="block">
               <p padlength="0" lo="61" lf="62">✓ State that “charge enclosed” means the same thing as “charge inside of”</p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">65-67</span></div>
+              <div class="block-info" style="display: none;"><span class="line-numbers">61-62</span></div>
             </div>
           </li>
           <li markerlength="3" padlength="0" lo="63" lf="64">
             <div class="block">
               <p padlength="0" lo="63" lf="64">Some students were tripped up by the fact that I switched from having the Gaussian volume larger than the charged object for the cylinder problems to smaller for the sphere problems. I had not noticed it. I’m not sure if it is something to leave as-is, so they get in the habit of reading the problem statement, or to change so they don’t get tripped up (because there is already enough to get tripped up on when trying the first time).</p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">65-67</span></div>
+              <div class="block-info" style="display: none;"><span class="line-numbers">63-64</span></div>
             </div>
           </li>
           <li markerlength="4" padlength="0" lo="65" lf="67">
@@ -827,13 +832,13 @@
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="85" lf="85"><a name="s2023" number="2" lo="85" raw="# S2023" class="anchor hanchor" href="#s2023" lf="85"><span class="hnumber">2</span>&nbsp;<span class="htext">S2023</span></a></h1>
+        <h1 lo="85" lf="85"><a name="s2023" number="2" lo="85" raw="# S2023" class="anchor hanchor" href="#s2023"><span class="hnumber">2</span>&nbsp;<span class="htext">S2023</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">85</span></div>
       </div>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="87" lf="87"><a name="comments-after" number="2.1" lo="87" raw="## Comments after" class="anchor hanchor" href="#comments-after" lf="87"><span class="hnumber">2.1</span>&nbsp;<span class="htext">Comments after</span></a></h2>
+        <h2 lo="87" lf="87"><a name="comments-after" number="2.1" lo="87" raw="## Comments after" class="anchor hanchor" href="#comments-after"><span class="hnumber">2.1</span>&nbsp;<span class="htext">Comments after</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">87</span></div>
       </div>
       <div class="block">
